Fixed menu visibility

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -266,8 +266,8 @@ textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[typ
     padding-bottom: 0;
 }
 
-/*#sidebar ul.topics li.parent > ul { /* <- NEW VERSION, ONLY DIRECT CHILDREN EXPANDED*/
-#sidebar ul.topics li.parent ul, #sidebar ul.topics > li.active ul {  /* <- OLD VERSION ALL CHILDREN EXPANDED */
+/* #sidebar ul.topics li.parent ul, #sidebar ul.topics > li.active ul { /* <- OLD VERSION ALL CHILDREN EXPANDED */
+#sidebar ul.topics li.parent ul, #sidebar ul.topics li.active > ul {  /* <- NEW VERSION ONLY FIRST CHILDREN EXPANDED */
     display: block;
 }
 #sidebar ul.topics > li > a {
